--- a/htmldemo.zcubethemes.com/designit/css/style.css
+++ b/htmldemo.zcubethemes.com/designit/css/style.css
@@ -31,7 +31,7 @@
 	color: #abaeb9;
 	font-style: normal;
      line-height: 26px;
-     background: #222327;
+     background: linear-gradient(to bottom, #009933 0%, #00ffff 100%);
       position: relative;
 }
 a, .btn, button, span, p, i, input, select, textarea, li, img, svg path, ::after, ::before, .transition-3, h1, h2, h3, h4, h5, h6 {
@@ -51,8 +51,8 @@ a, .btn, button, span, p, i, input, select, textarea, li, img, svg path, ::after
     margin-left: 43px;
 }
 .dark{
-    background: #1e1e1e;
-    color: #bcbcbc;
+    background: linear-gradient(to right, #00ff00 0%, #00ffff 100%);
+    color: #fff;
 }
 .dark .slider-content h2,.dark .section-title h2,.dark .skills-title h2,.dark .skills-title h6,.dark .section-title h6,.dark .testimonial-area h2,.dark .about-user .text h5,.dark h1,.dark h2,.dark h3,.dark h4,.dark h5,.dark h6,.dark .scrollbox__item,.dark .skill-name,.dark .s-slider-content h6,.dark .slider-content .expert strong,.dark .btn.ss-btn.active{
     color: #fff;
@@ -77,9 +77,9 @@ a, .btn, button, span, p, i, input, select, textarea, li, img, svg path, ::after
   border: 2px solid #333;
   background: #191919;
 }
-.dark .btn:hover{
+/* .dark .btn:hover{
 
-}
+} */
 .dark .btn::before {
   background-color: #f38b34;
   content: "";
@@ -491,7 +491,8 @@ font-size: 14px;
 letter-spacing: 0;
 line-height: 1;
 margin-bottom: 0;
-padding: 20px 30px;
+padding: 10px 30px;
+border-radius: 30px;
 text-align: center;
 text-transform: unset;
 touch-action: manipulation;
@@ -500,7 +501,7 @@ vertical-align: middle;
 white-space: nowrap;
 position: relative;
 z-index: 1;
-background: #df8133;
+background: linear-gradient(to bottom, #00ff00 0%, #00ffff 100%);
 border: none;
 font-family: 'Commissioner', sans-serif;
 font-weight: 500;
@@ -1024,11 +1025,12 @@ box-shadow: 0px 60px 120px 0px rgba(0, 0, 0, 0.06);
 .second-menu .main-menu ul li{margin-left: 40px;}
 .second-menu .main-menu ul li a::before{content: none;}
 .second-header-btn .btn {
-background: #df8133;
+background: linear-gradient(to bottom, #00ff00 0%, #00ffff 100%);
 font-size: 16px;
 text-transform: uppercase;
 color: #fff;
-padding: 20px 30px;
+border-radius: 30px;
+padding: 10px 10px;
     position: relative;
 }
 .second-header-btn .btn:hover {
@@ -5377,7 +5379,7 @@ border: 1px solid #df8133;
 }
 .faq-btn.collapsed {
     background: no-repeat;
-    color: #a5a7af;
+    color: #fff;
     border: 1px solid #333439;
 }
 .faq-wrap .card-header:first-child {
@@ -6407,7 +6409,7 @@ margin-bottom: 10px;
 
 .copyright-wrap{
     padding: 15px 0px;
-    background: #000;
+    background: linear-gradient(to bottom, #00ff00 0%, #00ffff 100%);
 color: #fff;
 }
 .copyright-wrap a{
