--- a/Furnlite.com/Furnlite/css/style.css
+++ b/Furnlite.com/Furnlite/css/style.css
@@ -25,7 +25,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Commissioner:wght@100;200;300;400;500;600;700;800;900&amp;family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&amp;display=swap');
 /* 1. Theme default css */
  body {
-           font-family: 'Commissioner', sans-serif;
+           font-family: 'Roboto', sans-serif;
 	font-size: 16px;
 	font-weight: normal;
 	color: #abaeb9;
@@ -51,11 +51,11 @@ a, .btn, button, span, p, i, input, select, textarea, li, img, svg path, ::after
     margin-left: 43px;
 }
 .dark{
-    background: linear-gradient(to right, #00ff00 0%, #00ffff 100%);
+    background: linear-gradient(to right, #fff 0%,  #02fcfc 100%);
     color: #fff;
 }
 .dark .slider-content h2,.dark .section-title h2,.dark .skills-title h2,.dark .skills-title h6,.dark .section-title h6,.dark .testimonial-area h2,.dark .about-user .text h5,.dark h1,.dark h2,.dark h3,.dark h4,.dark h5,.dark h6,.dark .scrollbox__item,.dark .skill-name,.dark .s-slider-content h6,.dark .slider-content .expert strong,.dark .btn.ss-btn.active{
-    color: #fff;
+    color: black;
 }   
 .dark .footer-top .anim-01,.dark .footer-top .anim-02{
     background: #292929;
@@ -319,6 +319,7 @@ bottom: -90px;
 }
 .img {
 	max-width: 100%;
+    top: 0;
 	transition: all 0.3s ease-out 0s;
 }
 .f-left {
@@ -485,7 +486,7 @@ label {
 
 .btn {
 border-radius: 0px;
-color: #fff;
+color: black;
 display: inline-block;
 font-size: 14px;
 letter-spacing: 0;
@@ -501,7 +502,7 @@ vertical-align: middle;
 white-space: nowrap;
 position: relative;
 z-index: 1;
-background: linear-gradient(to bottom, #00ff00 0%, #00ffff 100%);
+background: #00ff00;
 border: none;
 font-family: 'Commissioner', sans-serif;
 font-weight: 500;
@@ -1025,10 +1026,10 @@ box-shadow: 0px 60px 120px 0px rgba(0, 0, 0, 0.06);
 .second-menu .main-menu ul li{margin-left: 40px;}
 .second-menu .main-menu ul li a::before{content: none;}
 .second-header-btn .btn {
-background: linear-gradient(to bottom, #00ff00 0%, #00ffff 100%);
+background:#00ff00;
 font-size: 16px;
 text-transform: uppercase;
-color: #fff;
+color: black;
 border-radius: 30px;
 padding: 10px 10px;
     position: relative;
@@ -2036,12 +2037,12 @@ bottom: 5px;
     margin-bottom: 0 !important;
 }
 .pline{
-    color: #fff;
+    color: black;
     padding-left: 15px;
     border-left: 2px solid #df8133;
 }
 .about-title h5{
-   color: #df8133;
+   color: black;
     font-size: 22px;
     margin-bottom: 20px;
     text-transform: uppercase;
@@ -2277,6 +2278,7 @@ margin-top: 0;
 }
 .s-about-content p {
 	margin-bottom: 15px;
+    color: black;
 }
 .about-content strong{
     color: #df8133;
@@ -2448,7 +2450,7 @@ width: 66%;
 	color: #fff;
 }
 .section-title h5{
-color: #df8133;
+color: black;
 text-transform: uppercase;
 font-size: 22px;
 margin-bottom: 20px;
@@ -3564,7 +3566,7 @@ border: 2px solid #df8133;
 }
 /* steps area */
 .steps-area h2,.steps-area h3{
-color: #fff;}
+color: black;}
 .steps-area h3{
     margin-bottom: 15px;
 padding-bottom: 15px;
@@ -3593,7 +3595,7 @@ padding-bottom: 15px;
 }
 .step-box .text p{
     margin-bottom: 0;
-    color: #9f9f9f;
+    color: black;
 }
 .step-box .date-box {
 width: 120px;
@@ -3602,7 +3604,7 @@ margin-right: 30px;
 text-align: center;
 position: relative;
 float: left;
-color: #fff;
+color: black;
 font-size: 24px;
 font-weight: 600;
 line-height: 60px;
@@ -5379,7 +5381,7 @@ border: 1px solid #df8133;
 }
 .faq-btn.collapsed {
     background: no-repeat;
-    color: #fff;
+    color: black;
     border: 1px solid #333439;
 }
 .faq-wrap .card-header:first-child {
@@ -5396,6 +5398,7 @@ border: 1px solid #df8133;
 	-ms-flex: 1 1 auto;
 	flex: unset;
 	padding: 25px 0px 0;
+    color: black;
 }
 .faq-wrap .card-header h2 {
 	font-size: unset;
@@ -9080,6 +9083,7 @@ transition: 0.3s;
 	position: relative;
 	display: block;
 	margin-bottom: 25px;
+    color: black;
 }
 
 .service-detail .two-column{
@@ -10544,6 +10548,7 @@ color: #bcbcbc;
 }
 .details__content p {
   	margin-bottom: 18px;
+    color: black;
 }
 blockquote,.pages-content blockquote,.comment-list blockquote {
 background:#161616;
@@ -10786,6 +10791,7 @@ overflow: hidden;
 .related-post-wrap .rp__content p {
     margin-bottom: 0;
 	font-size: 14px;
+    color: black;
 }
 .avatar__wrap {
 	background: #161616;
@@ -10892,12 +10898,12 @@ margin-left: 20px;
 }
 .comment-text .comment-reply {
     display: inline-block;
-    border: 2px solid #ffffff12;
+    border: 2px solid black;
     padding: 8px 18px;
     border-radius:0;
     font-size: 14px;
     position: relative;
-    color: #fff;
+    color: black;
 }
 .comment-text .comment-reply a{
 	    color: #777777;
@@ -10941,6 +10947,7 @@ margin-left: 20px;
 .comment-text p {
     font-size: 16px;
 	margin-bottom: 0;
+    color: black;
 }
 .screen-reader-text {
     display: none;
