--- a/Furnlite.com/Furnlite/css/style.css
+++ b/Furnlite.com/Furnlite/css/style.css
@@ -4965,6 +4965,7 @@ color: #fff;
 .ta-info h6 {
 	font-size: 20px;
 	margin-bottom: 5px;
+    color: white;
 }
 .ta-info span {
 	font-size: 16px;
@@ -10662,11 +10663,11 @@ border-top: 2px solid #ffffff12;
 .post__tag ul li a {
 	font-size: 12px;
 	text-transform: uppercase;
-	border: 2px solid #ffffff12;
+	border: 2px solid black;
 	padding: 7px 10px;
 	
 	display: inline-block;
-	border-radius: 3px;
+	border-radius: 10px;
 	color: #9d9d9d;
 	margin-bottom: 10px;
 }
@@ -10699,7 +10700,7 @@ border-top: 2px solid #ffffff12;
 .posts_navigation .prev-link span {
     font-size: 12px;
     text-transform: uppercase;
-	
+    color:black;
 	display: block;
 	letter-spacing: 2px;
 	margin-bottom: 15px;
@@ -10749,7 +10750,7 @@ overflow: hidden;
 .posts_navigation .next-link span {
     font-size: 12px;
 	margin-bottom: 15px;
-	
+    color: black;
 	display: block;
     text-transform: uppercase;
 	letter-spacing: 2px;
